@@ -27,7 +27,7 @@ public class lc90 {
 
             cur.add(nums[i]); // Choose
             subsetDFS(i + 1, nums, cur, res); // Explore
-            cur.removeLast(); // Unchoose
+            cur.remove(cur.size() - 1); // Unchoose
         }
     }
 }
